[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/SFX/phaseJump4.ogg" type="AudioStream" id=1]
[ext_resource path="res://Assets/480_192.png" type="Texture" id=2]
[ext_resource path="res://Resources/Pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://Resources/Hover.tres" type="StyleBox" id=4]
[ext_resource path="res://Resources/Normal.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/Kenney Mini.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Resources/Font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scripts/GameoverScene.gd" type="Script" id=8]
[ext_resource path="res://Assets/background.png" type="Texture" id=9]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.154362, 0.33557, 0.503356, 0.684564, 0.838926 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.632813, 0, 1, 0.289063, 1, 0, 1, 0, 0.267761, 0.835938, 1, 0.835938, 0, 0.822876, 1, 1, 0, 0, 1 )

[sub_resource type="Animation" id=2]
resource_name = "Rotate"
length = 4.0
loop = true
step = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5.0, 5.0 ]
}

[sub_resource type="DynamicFont" id=3]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 6 )

[node name="GameoverScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 168, 96 )
texture = ExtResource( 9 )

[node name="BackgroundParticles" type="CPUParticles2D" parent="."]
position = Vector2( 160, 96 )
emitting = false
amount = 64
lifetime = 4.0
texture = ExtResource( 2 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
angular_velocity = 250.0
scale_amount = 0.3
scale_amount_random = 0.4
color_ramp = SubResource( 1 )

[node name="PhaseJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
bus = "SFX"

[node name="V" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -56.0
margin_right = 84.0
margin_bottom = 56.0
rect_min_size = Vector2( 168, 112 )
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="V"]
margin_right = 168.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 84, 10 )
custom_fonts/font = ExtResource( 7 )
text = "Game Over"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="V/Title"]
autoplay = "Rotate"
anims/Rotate = SubResource( 2 )

[node name="V" type="VBoxContainer" parent="V"]
margin_top = 35.0
margin_right = 168.0
margin_bottom = 75.0
custom_constants/separation = 0

[node name="Score" type="Label" parent="V/V"]
margin_right = 168.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 7 )
text = "Score:"
align = 1

[node name="Highscore" type="Label" parent="V/V"]
margin_top = 20.0
margin_right = 168.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 7 )
text = "Highscore:"
align = 1

[node name="H" type="HBoxContainer" parent="V"]
margin_top = 90.0
margin_right = 168.0
margin_bottom = 114.0

[node name="MenuButton" type="Button" parent="V/H"]
margin_right = 82.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "Title"

[node name="PlayAgainButton" type="Button" parent="V/H"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 4 )
text = "Play Again"

[connection signal="pressed" from="V/H/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="V/H/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
